test with simple app

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -18,5 +18,6 @@ jobs:
         with:
           k3d-name: "test02"
           k3d-args: "-p \"81:80@agent[0]\" -p \"444:443@agent[0]\" -p \"5054:53/udp@agent[0]\"  --agents 3 --no-lb --k3s-server-arg \"--no-deploy=traefik,servicelb,metrics-server\" --network bridge"
-      - run: make
-
+      - run: kubectl cluster-info
+      - run: docker ps -a
+      - run: docker network inspect bridge
