--- a/.github/workflows/k3dtest.yaml
+++ b/.github/workflows/k3dtest.yaml
@@ -8,12 +8,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: ./
+      - name: Install golang linting tools
+        run: GO111MODULE=on go get github.com/golangci/golangci-lint/cmd/golangci-lint@v1.32.0
+      - uses: kuritka/k3d-action@v0.0.3
         name: "test-cluster-1 on bridge network"
         with:
           k3d-name: "test01"
           k3d-args: "-p \"80:80@agent[0]\" -p \"443:443@agent[0]\" -p \"5053:53/udp@agent[0]\"  --agents 3 --no-lb --k3s-server-arg \"--no-deploy=traefik,servicelb,metrics-server\" --network bridge"
-      - uses: ./
+      - uses: kuritka/k3d-action@v0.0.3
         name: "test-cluster-2 on bridge network"
         with:
           k3d-name: "test02"
