--- a/.github/workflows/k3dtest.yaml
+++ b/.github/workflows/k3dtest.yaml
@@ -10,6 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install golang linting tools
         run: GO111MODULE=on go get github.com/golangci/golangci-lint/cmd/golangci-lint@v1.32.0
+      - run: golangci-lint run
 
       - uses: kuritka/k3d-action@v0.0.4
         name: "test-cluster-1 on bridge network"
