--- a/.github/workflows/k3dtest.yaml
+++ b/.github/workflows/k3dtest.yaml
@@ -8,10 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Install golang linting tools
-        run: GO111MODULE=on go get github.com/golangci/golangci-lint/cmd/golangci-lint@v1.32.0
+      - run: |
+          GO111MODULE=on go get github.com/golangci/golangci-lint/cmd/golangci-lint@v1.32.0
+          export PATH=~/go/bin:$PATH
       - run: golangci-lint run
-
       - uses: kuritka/k3d-action@v0.0.4
         name: "test-cluster-1 on bridge network"
         with:
@@ -29,4 +29,5 @@ jobs:
             -p "81:80@agent[0]" -p "444:443@agent[0]" -p "5054:53/udp@agent[0]"
             --network bridge
             --agents 3 --no-lb --k3s-server-arg "--no-deploy=traefik,servicelb,metrics-server"
+
       - run: make
