--- a/.github/workflows/k3dtest.yaml
+++ b/.github/workflows/k3dtest.yaml
@@ -13,8 +13,12 @@ jobs:
         with:
           k3d-name: "test-cluster-1"
           k3d-args: >-
-            -p "80:80@agent[0]" -p "443:443@agent[0]" -p "5053:53/udp@agent[0]"
-            --agents 3 --no-lb --network bridge
+            -p "80:80@agent[0]"
+            -p "443:443@agent[0]"
+            -p "5053:53/udp@agent[0]"
+            --agents 3
+            --no-lb
+            --network bridge
             --k3s-server-arg "--no-deploy=traefik,servicelb,metrics-server"
 
       - uses: kuritka/k3d-action@v0.0.4
@@ -22,10 +26,20 @@ jobs:
         with:
           k3d-name: "test-cluster-2"
           k3d-args: >-
-            -p "81:80@agent[0]" -p "444:443@agent[0]" -p "5054:53/udp@agent[0]"
+            -p "81:80@agent[0]"
+            -p "444:443@agent[0]"
+            -p "5054:53/udp@agent[0]"
             --network bridge
-            --agents 3 --no-lb --k3s-server-arg "--no-deploy=traefik,servicelb,metrics-server"
+            --agents 3
+            --no-lb
+            --k3s-server-arg "--no-deploy=traefik,servicelb,metrics-server"
+
       - run: |
           GO111MODULE=on go get github.com/golangci/golangci-lint/cmd/golangci-lint@v1.32.0
           export PATH=~/go/bin:$PATH
           make
+
+      - run: kubectl cluster-info --context k3d-test-cluster-1 && kubectl cluster-info --context k3d-test-cluster-2
+        name: cluster info
+      - run: docker ps -a
+      - run: docker network inspect bridge
