--- a/.github/workflows/k3dtest.yaml
+++ b/.github/workflows/k3dtest.yaml
@@ -14,6 +14,7 @@ jobs:
         with:
           k3d-name: "test-cluster-1"
           k3d-args: >-
+            --wait
             -p "80:80@agent[0]"
             -p "443:443@agent[0]"
             -p "5053:53/udp@agent[0]"
@@ -27,6 +28,7 @@ jobs:
         with:
           k3d-name: "test-cluster-2"
           k3d-args: >-
+            --wait
             -p "81:80@agent[0]"
             -p "444:443@agent[0]"
             -p "5054:53/udp@agent[0]"
