--- a/.github/workflows/k3dtest.yaml
+++ b/.github/workflows/k3dtest.yaml
@@ -8,36 +8,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Create k3d-action-bridge-network
-        run: docker network create --driver=bridge --subnet=172.16.0.0/24 k3d-action-bridge-network
-      - uses: kuritka/k3d-action@v0.0.5
-        name: "test-cluster-1 on bridge network"
+      - uses: kuritka/k3d-action@v1.0.1
+        name: "Create 1st k3d Cluster with Registry"
         with:
           k3d-name: "test-cluster-1"
+          k3d-registry: true
           k3d-args: >-
-            --wait
-            -p "80:80@agent[0]"
-            -p "443:443@agent[0]"
-            -p "5053:53/udp@agent[0]"
-            --agents 3
+            --agents 1
             --no-lb
-            --network k3d-action-bridge-network
             --k3s-server-arg "--no-deploy=traefik,servicelb,metrics-server"
-
-      - uses: kuritka/k3d-action@v0.0.5
-        name: "test-cluster-2 on bridge network"
+      - uses: kuritka/k3d-action@v1.0.1
+        name: "Create 2nd k3d Cluster with Registry"
         with:
           k3d-name: "test-cluster-2"
+          k3d-registry: true
           k3d-args: >-
-            --wait
-            -p "81:80@agent[0]"
-            -p "444:443@agent[0]"
-            -p "5054:53/udp@agent[0]"
-            --agents 3
+            --agents 1
             --no-lb
-            --network k3d-action-bridge-network
             --k3s-server-arg "--no-deploy=traefik,servicelb,metrics-server"
-
 
       - name: Nodes
         # hack, wait until agents are ready.
