--- a/.github/workflows/k3dtest.yaml
+++ b/.github/workflows/k3dtest.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: AbsaOSS/k3d-action@v1.2.0
+      - uses: AbsaOSS/k3d-action@8-feature
         name: "Create 1st k3d Cluster with Registry"
         with:
           cluster-name: "test-cluster-1"
@@ -17,7 +17,7 @@ jobs:
             --agents 1
             --no-lb
             --k3s-server-arg "--no-deploy=traefik,servicelb,metrics-server"
-      - uses: AbsaOSS/k3d-action@v1.2.0
+      - uses: AbsaOSS/k3d-action@8-feature
         name: "Create 2nd k3d Cluster with Registry"
         with:
           cluster-name: "test-cluster-2"
