--- a/.github/workflows/wfl.yaml
+++ b/.github/workflows/wfl.yaml
@@ -1,4 +1,4 @@
-name: Multicluster test
+name: SimpleTest
 
 on:
   [workflow_dispatch, push]
@@ -12,4 +12,6 @@ jobs:
         with:
           cluster-name: "cmak"
           args: >-
-           --config ./k3d.yaml
+           --config k3d.yaml
+      - run:
+          kubectl get nodes
