--- a/.github/workflows/wfl.yaml
+++ b/.github/workflows/wfl.yaml
@@ -11,7 +11,6 @@ jobs:
         name: create cluster
         with:
           cluster-name: "cmak"
-          args: >-
-           --config k3d.yaml
+          args: --config=./k3d.yaml
       - run:
           kubectl get nodes
