--- a/.github/workflows/doge.yaml
+++ b/.github/workflows/doge.yaml
@@ -7,6 +7,8 @@ jobs:
     name: SIMPLE test
     runs-on: ubuntu-latest
     steps:
+      - name: go action
+        run: go version
       - uses: kuritka/doge-action@v0.0.2
         name: DOGE-ACTION
         with:
